fix: overflow in mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -341,7 +341,6 @@ main {
   #profile-section {
     width: 100%;
     margin: 0;
-    position: relative;
   }
 
   #mobile-menu {
